Addressing code review concerns/comments